loadbalancer.tf
resource "aws_lb" "load-balancer" {
  name               = "lb-tf"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb_sg.id]
  subnets            = [aws_subnet.public_subnet1.id, aws_subnet.public_subnet2.id]

  enable_deletion_protection = true

  #   access_logs {
  #     bucket  = aws_s3_bucket.lb_logs.id
  #     prefix  = "lb"
  #     enabled = true
  #   }

  tags = {
    Environment = "env"
  }
}

resource "aws_lb_target_group" "target-group" {
  name     = "tg-tf"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    port                = "traffic-port"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 4
    interval            = 5
  }
}

resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.load-balancer.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target-group.arn
  }
}

resource "aws_lb_listener_rule" "rule" {
  listener_arn = aws_lb_listener.listener.arn

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target-group.arn
  }

  condition {
    host_header {
      values = ["example.com"]
    }
  }
}


# resource "aws_lb_listener_rule" "rule2" {
#   listener_arn = aws_lb_listener.listener.arn

#   action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.target-group.arn
#   }

#   condition {
#     path_pattern {
#       values = ["/test"]
#     }
#   }
# }

# resource "aws_lb_listener_rule" "rule3" {
#   listener_arn = aws_lb_listener.listener.arn

#   action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.target-group.arn
#   }

#   condition {
#     path_pattern {
#       values = ["/test2"]
#     }
#   }
# }
