vpc.tf
#----------------- Create a VPC -----------------#
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block[0]
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = var.vpc_name
  }
}
